# imscreenpy

./: LICENSE  README.md  imscreenpy_env.yml  main.py  pyproject.toml  requirements.txt
cluster_scripts/: run_main_nb.sh
imscreenpy/: config.py  hit_reporting.py  misc.py
imscreenpy/cell_prediction_models/: prediction_model.py
imscreenpy/celltype_classification/: celltype_detection_manager.py  celltype_detection_models.py
imscreenpy/config_files/: cp_id_columns.txt  cp_morphology_pca_columns.txt  nb_class_assignments.txt  nb_morph_qc_params.txt  nb_paths_and_patterns.txt
imscreenpy/db_df_processing/: db_functions.py  df_functions.py
imscreenpy/drug_scoring/: drug_scoring.py  plotting.py
imscreenpy/qc/: qc_config.py  qc_functions.py
imscreenpy/viability_classification/: viability_models.py
imscreenpy/visualization/: expression_control_plotting.py  qc_plotting.py  single_cell_vis.py
pbmc_example_analyses/: README.md  analyze_drug_responses.ipynb  prepare_qc_visualization.py  qc_and_aggregate.ipynb
pbmc_example_analyses/example_data/: 2121039-40_viabilities.csv  example_transferlist.csv  sample_annotations.xls
src/imscreenpy/: __init__.py  config.py  hit_reporting.py  main.py  misc.py
src/imscreenpy/cell_prediction_models/: prediction_model.py
src/imscreenpy/celltype_classification/: celltype_detection_manager.py  manual_thresholding_model.py
src/imscreenpy/config_files/: aae_required_columns.txt  aml_morph_qc_params.txt  aml_paths_and_patterns.txt  cp_morphology_qc_columns.txt  nb_cp_id_columns.txt  nb_paths_and_patterns.txt  nuclei_viability_features.txt
src/imscreenpy/db_df_processing/: db_functions.py  df_functions.py
src/imscreenpy/drug_scoring/: drug_scoring.py  plotting.py
src/imscreenpy/qc/: qc_functions.py
testing_notebooks/: compare_pipelines.ipynb
(+3 files in other folders)
